@@ -4,6 +4,7 @@ Upcoming:
 - The 'oredict' support for voidable blocks in the shape card has been replaced with 'tag matching'
 - The shapecard gui can open from within the gui of the Builder
 - Fixed the recipes for the vanilla recipe book
+- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)
 
 2.0.2-alpha:
 - Michael Hillcox added some protection to the builder to prevent it from crashing in weird situations
